update package.json -- less restrictive dep version requirements

--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "knip": "knip"
   },
   "peerDependencies": {
-    "@payloadcms/next": "3.0.2",
-    "@payloadcms/ui": "3.0.2",
+    "@payloadcms/next": "^3.0.2",
+    "@payloadcms/ui": "^3.0.2",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "next": "15.0.0",
-    "payload": "3.0.2",
+    "next": "^15.0.0",
+    "payload": "^3.0.2",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020"
   },
@@ -42,7 +42,7 @@
     "@types/node": "22.7.5",
     "copyfiles": "^2.4.1",
     "knip": "^5.39.2",
-    "payload": "3.0.2",
+    "payload": "^3.0.2",
     "rimraf": "^6.0.1",
     "typescript": "5.5.3"
   },
